2003-10-03  Matt Thomas <matt@3am-software.com>

	* emulparams/hppanbsd.sh: Remove OUTPUT_FORMAT.
	* emulparams/hppaobsd.sh: Add OUTPUT_FORMAT="elf32-hppa".

2003-10-06  Robert Millan  <robertmh@gnu.org>

	* configure.tgt: Match GNU/KNetBSD with new knetbsd*-gnu triplet.

2003-10-02  Ivan Warren <ivan@vmfacility.fr>

        * pe-dll.c (make_one): Correct sym def order & pick right sym for
	.idata$7 reloc.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* NEWS: Add an indication of the cutoff for 2.14.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* ldmain.c (get_emulation): Ignore "-mips64r2".

2003-09-03  Robert Millan  <robertmh@gnu.org>

	* configure.host: Match GNU/KFreeBSD with new kfreebsd*-gnu
	triplet.
	* configure.tgt: Likewise.

2003-08-29  Jafa  <jafa@silicondust.com>

	* emulparams/elf32ip2k.sh (TEMPLATE_NAME): Define.

2003-08-21  Nick Clifton  <nickc@redhat.com>

	* po/tr.po: Updated Turkish translation.

2003-08-20  Nick Clifton  <nickc@redhat.com>

	* ldmain.c: Initialise the new fields in bfd_link_info to
        NOT_YET_SET.
       	* lexsup.c (enum option_values): New enum.  Use this to
        replace the handed coded values for the long switch options.
        (ld_options): Add 'unresolved-symbols',
        'warn-unresolved-symbols' and 'error-unresolved-symbols'.
        (parse_args): Handle the new switches.  Set the values of
        unresolved_symbols_in_objects and
        unresolved_symbols_in_shared_libs appropriately.  If they were
        not initialised by the command line, install default values.
        * emultempl/elf32.em (handle_option): Update OPTION_GROUP and
        -z defs to use the new fields in bfd_link_info.
	* ld.texinfo: Document the new switches.
	* NEWS: Mention this feature.

2003-08-15 Dmitry Diky <diwil@mail.ru>
	
	* Makefile.am (GENSCRIPTS_EXTRA): New script definition which
	calls genscripts_extra.sh.
	Rearrange all msp430 depends using this script.
	* Makefile.in: Regenerate.